# Pos

./: .clang-format  CMakeLists.txt  README.md  amnieties.sql  analysis.cpp  analysis.h  analytics.cpp  analytics.h  analytics.ui  boi.sql  cardwidget.cpp  cardwidget.h  cart.cpp  cart.h  cartItem.cpp  cartItem.h  cartitem.cpp  cartitem.h  default.nix  dialog.cpp  dialog.h  employeePage.h  employeeePage.cpp  feedback.cpp  feedback.h  feedback.ui  flake.nix  itemmenu.cpp  itemmenu.h  linechart.cpp  linechart.h  linechart.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  member.cpp  (+22 more)
SQL/: admin.db  amnieties.sql  employees_2.db  products.db  sales.db
Sql/: admin.db  employees_2.db  feedback.db  invetory.db  products.db
doc/: Software Requirements and Sepcifications.docx  UPDATED CLASS DIAGRAM.docx
employeepage/: dialog.cpp  dialog.h  dialog.ui  mainemp.cpp  remove.cpp  remove.h  remove.ui  sidebar2.cpp  sidebar2.h  sidebar2.pro  sidebar2.qrc  sidebar2.ui
frontend/Pos/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
img/: bg
include/: itemmanagement.h  mainwindow.h  pos.h  settings.h  sidebar.h  ui.h
include/Analysis/: analysis.h
include/Login/: login.h  signup_window.h
include/Shop/: cart.h  feedback.h  receipt.h  shop.h
include/User/: dialog.h  user.h
receipt/: receipt.txt
src/: Items.cpp  Items.h  Sql for amnieties  itemmanagement.cpp  main.cpp  mainwindow.cpp  pos.cpp  settings.cpp  sidebar.cpp  ui.cpp  user.cpp  user.h
src/Analysis/: analysis.cpp  linechart.cpp
src/Login/: login.cpp  login.ui  signup_window.cpp  signup_window.ui
src/Shop/: cart.cpp  cartitem.cpp  feedback.cpp  receipt.cpp  shop.cpp
src/User/: dialog.cpp  removeuser.cpp  user.cpp
